@@ -117,6 +117,7 @@ class ClientStorage(object):
                  wait_for_server_on_startup=None, # deprecated alias for wait
                  wait=None, wait_timeout=None,
                  read_only=0, read_only_fallback=0,
+                 drop_cache_rather_verify=False,
                  username='', password='', realm=None,
                  blob_dir=None, shared_blob_dir=False):
         """ClientStorage constructor.
@@ -191,6 +192,9 @@ class ClientStorage(object):
 
         realm -- not documented.
 
+        drop_cache_rather_verify -- a flag indicating that the cache
+            should be dropped rather than expensively verified.
+
         blob_dir -- directory path for blob data.  'blob data' is data that
             is retrieved via the loadBlob API.
 
@@ -212,6 +216,14 @@ class ClientStorage(object):
 
         if debug:
             log2("ClientStorage(): debug argument is no longer used")
+
+        # Remember some parameters for "_setupCache"
+        self._var_ = var
+        self._storage_ = storage
+        self._client_ = client
+        self._cache_size_ = cache_size
+
+        self._drop_cache_rather_verify = drop_cache_rather_verify
 
         # wait defaults to True, but wait_for_server_on_startup overrides
         # if not None
@@ -336,15 +348,7 @@ class ClientStorage(object):
         else:
             self.fshelper = None
 
-        # Decide whether to use non-temporary files
-        if client is not None:
-            dir = var or os.getcwd()
-            cache_path = os.path.join(dir, "%s-%s.zec" % (client, storage))
-        else:
-            cache_path = None
-        self._cache = self.ClientCacheClass(cache_path, size=cache_size)
-        # TODO:  maybe there's a better time to open the cache?  Unclear.
-        self._cache.open()
+        self._setupCache()
 
         self._rpc_mgr = self.ConnectionManagerClass(addr, self,
                                                     tmin=min_disconnect_poll,
@@ -604,6 +608,28 @@ class ClientStorage(object):
                 self._ready.set()
                 return "quick verification"
         
+        # This breaks some tests and probably is not worth special treatment
+##        if not self._cache: # an empty cache
+##            log2("No verification necessary (cache is empty)")
+##            self._server = server
+##            self._ready.set()
+##            return "no verification"
+
+        # From this point on, we do not have complete information about
+        # the missed transactions.
+        # Therefore, we cannot reliably sanitize the "Connection" caches
+        # To be on the safe side, we flush these caches.
+        if self._db is not None:
+            self._db.invalidateCache()
+
+        if self._client_ is None and self._cache and self._drop_cache_rather_verify:
+            log2("dropping cache")
+            self._cache.close()
+            self._setupCache() # creates a new cache
+            self._server = server
+            self._ready.set()
+            return "cache dropped"
+
         log2("Verifying cache")
         # setup tempfile to hold zeoVerify results
         self._verification_invalidations = []
@@ -1248,3 +1274,19 @@ class ClientStorage(object):
     invalidate = invalidateVerify
     end = endVerify
     Invalidate = invalidateTrans
+
+    def _setupCache(self):
+        '''create and open the cache.'''
+        # Decide whether to use non-temporary files
+        var = self._var_
+        storage = self._storage_
+        client = self._client_
+        cache_size = self._cache_size_
+        if client is not None:
+            dir = var or os.getcwd()
+            cache_path = os.path.join(dir, "%s-%s.zec" % (client, storage))
+        else:
+            cache_path = None
+        self._cache = self.ClientCacheClass(cache_path, size=cache_size)
+        # TODO:  maybe there's a better time to open the cache?  Unclear.
+        self._cache.open()
